[package]
name = "librados"
version = "0.1.0"
edition = "2024"
license = "MIT"
homepage = "https://github.com/datdenkikniet/librados"
repository = "https://github.com/datdenkikniet/librados"
description = "Idiomatic (async) rust bindings for librados"
keywords = [ "rados", "ceph", "librados", "async" ]
categories = [ "api-bindings", "asynchronous", "filesystem" ]


[dependencies]
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt"] }
