[package]
name = "ceph-client"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
ceph-foundation = { version = "0.1.0", path = "../ceph-foundation" }
ceph-messages = { version = "0.1.0", path = "../ceph-messages" }
cephx = { version = "0.1.0", path = "../cephx" }
clap = { version = "4.5.60", features = ["derive"] }
msgr2 = { version = "0.1.0", path = "../msgr2" }
