[package]
name = "msgr2"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes", "alloc"] }
cbc = "0.1.2"
crc = "3.4.0"
crc-catalog = "2.4.0"
ctr = "0.9.2"
hmac = "0.12.1"
nix = { version = "0.30.1", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
